Imagens na pasta certa

--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -45,12 +45,12 @@ body {
 }
 
 .image-bg-fluid-height {
-	background: url('../land.png') no-repeat center center scroll;
+	background: url('../assets/images/land.png') no-repeat center center scroll;
   padding: 100px 0;
 }
 
 .image-bg-fixed-height {
-	background: url('../foot.png') no-repeat center center scroll;
+	background: url('../assets/images/foot.png') no-repeat center center scroll;
   height: 450px;
   margin-bottom: 0px;
 }
